// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[List] should match component header snapshot 1`] = `
<div>
  <div
    class="flex flex-col "
    role="list"
  >
    <div
      class="header"
    >
      Header Title
    </div>
    <div
      class="flex flex-col overflow-y-auto"
    />
  </div>
</div>
`;

exports[`[List] should match empty snapshot 1`] = `
<div>
  <div
    class="flex flex-col "
    role="list"
  >
    <div
      class="bg-slate-100 font-bold"
    />
    <div
      class="flex flex-col overflow-y-auto"
    />
  </div>
</div>
`;

exports[`[List] should match header + component items snapshot 1`] = `
<div>
  <div
    class="flex flex-col "
    role="list"
  >
    <div
      class="bg-slate-100 font-bold"
    >
      Header title
    </div>
    <div
      class="flex flex-col overflow-y-auto"
    >
      <img
        src="//image.png"
      />
      <label>
        <input
          type="checkbox"
        />
        Hello World
      </label>
    </div>
  </div>
</div>
`;

exports[`[List] should match header + string items snapshot 1`] = `
<div>
  <div
    class="flex flex-col "
    role="list"
  >
    <div
      class="bg-slate-100 font-bold"
    >
      Header title
    </div>
    <div
      class="flex flex-col overflow-y-auto"
    >
      Hello
      World
    </div>
  </div>
</div>
`;

exports[`[List] should match string header snapshot 1`] = `
<div>
  <div
    class="flex flex-col "
    role="list"
  >
    <div
      class="bg-slate-100 font-bold"
    >
      Header title
    </div>
    <div
      class="flex flex-col overflow-y-auto"
    />
  </div>
</div>
`;
